[metadata]
name = pybbl
version = 1.0.0.dev0
description = Hands On repo to learn how to package a Python project
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = bbl, packaging, learn
license = Apache License 2
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
packages = find:
install_requires = colored; pandas; numpy
py_modules = iamamodule
include_package_data = True
scripts =  bin/iamascript

[options.package_data]
* = data/*.csv
